[tool.poetry]
name = "reverb-inventory-tool"
version = "0.1.0"
description = "A command-line tool for managing Reverb inventory."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
mypy = "^1.9.0"

[tool.isort]
profile = "black"

[tool.reverb_inventory_tool]
api_token = "5088fe5e45f1994fc6658c175686d30707a9d8d39e86eab1e967ccff9bcf6919" # Replace with your Reverb Personal Access Token

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

